sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: not found: value inverse
inverse=true
^AlgBubbleSort1:5: error: not found: value inverse
while (inverse=true)
       ^AlgBubbleSort1:7: error: not found: value inverse
	inverse=fals
        ^AlgBubbleSort1:13: error: not found: value inverse
			inverse=true
                        ^