sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  
{
inverse=true
while (inverse=true)
{
	inverse=fals
	for (i<-0 to getNombreValeurs()-2)
	{
		if (!(getValeur(i)<getValeur(i+1)))
		{
			echange(i,i+1)
			inverse=true
		}
	}

}
}